--- a/Place4meWebAPI/Place4meWebAPI.csproj
+++ b/Place4meWebAPI/Place4meWebAPI.csproj
@@ -237,6 +237,7 @@
     <Compile Include="Controllers\CarParksController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MobileCarParksController.cs" />
+    <Compile Include="Controllers\OpenCVsController.cs" />
     <Compile Include="Controllers\SlotDetailsController.cs" />
     <Compile Include="Controllers\SlotsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -356,7 +357,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>3284</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
