--- a/ServicesImpl/ServicesImpl.csproj
+++ b/ServicesImpl/ServicesImpl.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="CarParkMapper.cs" />
     <Compile Include="CarParkServiceImpl.cs" />
+    <Compile Include="FreeSlotNoMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SlotDetailServiceImpl.cs" />
     <Compile Include="SlotServiceImpl.cs" />
